--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -611,7 +611,7 @@
    "metadata": {},
    "source": [
     "# Conclusion\n",
-    "From the previous analysis, we can see that all guessing methods work differently, mostly based on the correct answer.\\\n",
+    "From the previous analysis, we can see that all guessing methods work differently, mostly based on the real correct answer.\\\n",
     " Another fact is that, the correct answer is distributed evenly among the 4 answers. Therefore, to achieve the highest result, the best way is to solve the problems instead of relying on lucky guesses. But if the problems are too difficult, it is totally up to your luck to play the guessing game :))."
    ]
   }
