--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -146,7 +146,7 @@
    "metadata": {},
    "source": [
     "## 4. Random keys:\n",
-    "In this guessing strategy, we will guess all 10 questions randomly. We will ask Python to randomly select the choice (A, B, C, or D) for each question using the Random` library.\\\n",
+    "In this guessing strategy, we will guess all 10 questions randomly. We will ask Python to randomly select the choice (A, B, C, or D) for each question using the `Random` library.\\\n",
     "The following figure illustrates the process:\n",
     "\n",
     "![Strategy1](./img/strat4.png)\n",
