--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -602,7 +602,7 @@
     "- **_All same answers_**: It appears that this strategy gives the best result. But in the same time, it appears to be mostly the worst strategy. This tells us that this method is good enough to be used. In some cases, it even gives a significantly bad result (`All_B` and `All_A`).\n",
     "- **_Slide answers_**: This strategy produces the best result. Meanwhile, it appears some in the worst strategy. This tells us that this method is not too good to be used, however, it appears less in worst strategies than **_all same answers_**. We can fairly say that, this strategy is slightly better than **_all same answers_**.\n",
     "- **_Diagonal answers_**: Surprisingly, this method does not appear in both charts. This tells us that this method is neither too good nor too bad to be used.\n",
-    "- **_Random answers_**: This method does not appear in the best guesing strategy. However, it takes part in the worst strategies. We can say that, this method might not be used."
+    "- **_Random answers_**: This method does not appear in the worst guesing strategy. However, it takes part in the best strategies. We can say that, this method might be used."
    ]
   },
   {
